# ai-dev-kit-steve

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  install.ps1  install.sh
.test/: README.md  SKILL.md  TECHNICAL.md  install_skill_test.sh  pyproject.toml
.test/baselines/aibi-dashboards/: baseline.yaml
.test/baselines/databricks-agent-bricks/: baseline.yaml
.test/baselines/databricks-model-serving/: baseline.yaml
.test/baselines/databricks-synthetic-data-gen/: baseline.yaml
.test/baselines/databricks-zerobus-ingest/: baseline.yaml
.test/baselines/spark-declarative-pipelines/: baseline.yaml
.test/baselines/zerobus-ingest/: baseline.yaml
.test/notebooks/: gepa_skill_optimization_demo.ipynb
.test/references/: scorers.md  yaml-schemas.md
.test/scripts/: add_example.py  baseline.py  generate_examples.py  generate_ground_truth.py  init_skill.py  mlflow_eval.py  optimize.py  regression.py  run_eval.py  trace_to_examples.py
.test/skills/_routing/: ground_truth.yaml  manifest.yaml
.test/skills/aibi-dashboards/: candidates.yaml  ground_truth.yaml  manifest.yaml
.test/skills/databricks-agent-bricks/: ground_truth.yaml  manifest.yaml
.test/skills/databricks-aibi-dashboards/: manifest.yaml
.test/skills/databricks-app-apx/: ground_truth.yaml  manifest.yaml
.test/skills/databricks-app-python/: ground_truth.yaml  manifest.yaml
.test/skills/databricks-asset-bundles/: manifest.yaml
.test/skills/databricks-config/: ground_truth.yaml  manifest.yaml
.test/src/skill_test/: config.py  (+2 more)
.test/tests/: test_cli.py  test_optimize_e2e.py  test_scorers.py
(+258 files in other folders)
